# LUCiFEx

./: .buildinfo  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  _toc.yml  build.sh  build_gallery.py  cleanup.sh  gallery.html  gallery.md  genindex.html  home.html  make_gallery.py  notation.html  objects.inv  pyproject.toml  search.html  searchindex.js  table.html  table.md  test.ipynb
_sources/: gallery.md  home.md  notation.md
benchmarks/: .gitignore  _config.yml  _toc.yml  build.sh
book/: README.md  _config.yml  _toc.yml  build.sh  build_all.sh  gallery.md  gallery_local.md  make_gallery.py  make_html_paths.py  notation.md  table.md
conda/: conda.txt  conda.yml  conda_explicit.txt  conda_from_history.yml
demo/: .gitignore  A01.1_darcy_lens.ipynb  A01.2_darcy_anticline.ipynb  A01_poisson.ipynb  A02.0_stokes_equations.md  A02.1_stokes_poisseuille.ipynb  A02.2_stokes_cavity.ipynb  A02.3_stokes_forced.ipynb  A02_diffusion.ipynb  A03.0_navier_stokes_equations.md  A03.2_navier_stokes_forced.ipynb  A03_advection.ipynb  A04.1_darcy_convection_rayleigh_benard_rectangle.ipynb  A04_advection_diffusion.ipynb  A05_darcy.ipynb  A05_darcy_flow.ipynb  A06_poisson_vector.ipynb  A06_stokes.ipynb  A06_stokes_flow.ipynb  A07_mathieu.ipynb  A07_rayleigh_benard.ipynb  A07_rayleigh_darcy.ipynb  A07_streamfunction_formulation.ipynb  A08_elder_convection.ipynb  A08_poisson_annulus.ipynb  A08_porous_convection_rayleigh_benard.ipynb  A08_rayleigh_benard.ipynb  A09.0_darcy_equations.md  A09.1_darcy_lens.ipynb  A09.2_darcy_anticline.ipynb  A09_darcy.ipynb  (+142 more)
(+2857 files in other folders)
